--- a/src/app/main-layout-component/sidebar-component/sidebar-component.component.html
+++ b/src/app/main-layout-component/sidebar-component/sidebar-component.component.html
@@ -1,13 +1,19 @@
-<div style="padding: 20px" *ngIf="logServ.isLogin">
+<div style="padding: 20px">
   <ul class="navbar-nav">
     <li class="nav-item active">
-      <a routerLink="/info" class="nav-link" >Main page </a>
+      <a routerLink="/" class="nav-link">Main page </a>
     </li>
     <li class="nav-item">
-      <a routerLink="/login" class="nav-link" href="#">User info</a>
+      <a routerLink="/ba" class="nav-link">Backend articles</a>
     </li>
     <li class="nav-item">
-      <a routerLink="/create" class="nav-link" href="#">Create user</a>
+      <a routerLink="/be" class="nav-link">Business Analysis articles</a>
+    </li>
+    <li class="nav-item">
+      <a routerLink="/fe" class="nav-link">Frontend articles</a>
+    </li>
+    <li class="nav-item">
+      <a routerLink="/gd" class="nav-link">Game Development articles</a>
     </li>
   </ul>
 </div>
