--- a/src/app/main-layout-component/main-content-component/ba/ba.component.html
+++ b/src/app/main-layout-component/main-content-component/ba/ba.component.html
@@ -73,7 +73,7 @@
 </div>
 
 <div class="header d-flex justify-content-between p-4">
-  <h2>Backend articles</h2>
+  <h2>{{currentCategoryHeader}} articles</h2>
   <button
     class="btn btn-primary"
     (click)="openNewArticleForm()"
