--- a/src/app/main-layout-component/main-content-component/hello/hello.component.html
+++ b/src/app/main-layout-component/main-content-component/hello/hello.component.html
@@ -1,4 +1,4 @@
 <div class="greeting">
-  <h1>Hello, Lionwood guys!</h1>
+  <h1>Hello, guys!</h1>
   <p>Please, choose one of the category of this blog</p>
 </div>
