--- a/src/app/main-layout-component/sidebar-component/sidebar-component.component.html
+++ b/src/app/main-layout-component/sidebar-component/sidebar-component.component.html
@@ -4,10 +4,10 @@
       <a routerLink="/" class="nav-link">Main page </a>
     </li>
     <li class="nav-item">
-      <a routerLink="/ba" class="nav-link">Backend articles</a>
+      <a routerLink="/be" class="nav-link">Backend articles</a>
     </li>
     <li class="nav-item">
-      <a routerLink="/be" class="nav-link">Business Analysis articles</a>
+      <a routerLink="/ba" class="nav-link">Business Analysis articles</a>
     </li>
     <li class="nav-item">
       <a routerLink="/fe" class="nav-link">Frontend articles</a>
