--- a/src/app/main-layout-component/main-content-component/ba/ba.component.html
+++ b/src/app/main-layout-component/main-content-component/ba/ba.component.html
@@ -85,7 +85,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div *ngFor="let article of baArticles" class="col-sm-4">
+    <div *ngFor="let article of articles" class="col-sm-4">
       <div class="card" style="">
         <img [src]= article.imgUrl  class="card-img-top" alt="...">
         <div class="card-body">
