--- a/src/app/main-layout-component/main-content-component/ba/ba.component.html
+++ b/src/app/main-layout-component/main-content-component/ba/ba.component.html
@@ -86,7 +86,7 @@
 <div class="container-fluid">
   <div class="row">
     <div *ngFor="let article of articles" class="col-sm-4">
-      <div class="card" style="">
+      <div class="card" style="height: 400px">
         <img [src]= article.imgUrl  class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">{{article.title}}</h5>
