--- a/src/app/main-layout-component/sidebar-component/sidebar-component.component.html
+++ b/src/app/main-layout-component/sidebar-component/sidebar-component.component.html
@@ -1,19 +1,19 @@
 <div style="padding: 20px">
   <ul class="navbar-nav">
-    <li class="nav-item active">
-      <a routerLink="/" class="nav-link">Main page </a>
+    <li class="nav-item">
+      <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">Main page </a>
     </li>
     <li class="nav-item">
-      <a routerLink="/be" class="nav-link">Backend articles</a>
+      <a routerLink="/be"  routerLinkActive="active" class="nav-link">Backend articles</a>
     </li>
     <li class="nav-item">
-      <a routerLink="/ba" class="nav-link">Business Analysis articles</a>
+      <a routerLink="/ba"  routerLinkActive="active" class="nav-link">Business Analysis articles</a>
     </li>
     <li class="nav-item">
-      <a routerLink="/fe" class="nav-link">Frontend articles</a>
+      <a routerLink="/fe"  routerLinkActive="active" class="nav-link">Frontend articles</a>
     </li>
     <li class="nav-item">
-      <a routerLink="/gd" class="nav-link">Game Development articles</a>
+      <a routerLink="/gd"  routerLinkActive="active" class="nav-link">Game Development articles</a>
     </li>
   </ul>
 </div>
