Global refactor, added backend part.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-header-component></app-header-component>
-<app-main-layout-component></app-main-layout-component>
+<!--<app-header-component></app-header-component>-->
+<!--<app-main-layout-component></app-main-layout-component>-->
+
+<router-outlet></router-outlet>
