--- a/src/app/main-layout-component/main-content-component/articles-component/articles.component.html
+++ b/src/app/main-layout-component/main-content-component/articles-component/articles.component.html
@@ -7,7 +7,7 @@
             >Choose category of the article:
           </label>
           <select
-            class="form-select"
+            class="form-select mat-select"
             aria-label="Default select example"
             formControlName="category"
             id="category"
