--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,14 @@
-.active {
-  color:darkgreen;
+@import "assets/styles/variables";
+@import "assets/styles/helpers";
+@import "~@angular/material/prebuilt-themes/purple-green.css";
+@import "assets/styles/material-theme";
+
+body {
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+* {
+  font-family: 'Ubuntu', sans-serif;
 }
